[gd_scene load_steps=12 format=2]

[ext_resource path="res://Escenas/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Escenas/Laser.tscn" type="PackedScene" id=2]
[ext_resource path="res://Escenas/Globo azul.tscn" type="PackedScene" id=3]
[ext_resource path="res://Escenas/Scripts/main.gd" type="Script" id=4]
[ext_resource path="res://Escenas/Interfaz.tscn" type="PackedScene" id=5]
[ext_resource path="res://Escenas/Globo_naranja.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/Background.jpg" type="Texture" id=7]
[ext_resource path="res://Escenas/Nube.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sounds/Musica de fondo.mp3" type="AudioStream" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 22.4488, 815.701, 0, 0, 0, 0, 547.03, 816.341, 0, 0, 0, 0, 215.014, 814.86 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 138.903, 46.4778 )

[node name="main" type="Node2D"]
script = ExtResource( 4 )
GloboAzul = ExtResource( 3 )
GloboNaranja = ExtResource( 6 )
Nube = ExtResource( 8 )

[node name="Fondo" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 799.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nube" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 1060, 100 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 929.829, 408.776 )

[node name="Laser" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 802.844, 455.475 )

[node name="Globo azul" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 200, 0 )

[node name="Globo_naranja" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 500, 0 )
contact_monitor = true

[node name="Globo_timer" type="Timer" parent="."]

[node name="Nube_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Puntos_timer" type="Timer" parent="."]

[node name="Tiempo_timer" type="Timer" parent="."]

[node name="Inicio_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Camino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="Globo_Posicion" type="PathFollow2D" parent="Camino"]
position = Vector2( 22.4488, 815.701 )
rotation = 0.00118138

[node name="Camino2" type="Path2D" parent="."]
visible = false
position = Vector2( 0.0491791, -1.68176 )
scale = Vector2( 1.03527, 1 )
curve = SubResource( 1 )

[node name="Globo_Posicion2" type="PathFollow2D" parent="Camino2"]
position = Vector2( 22.4488, 815.701 )
rotation = 0.00118138

[node name="Interfaz" parent="." instance=ExtResource( 5 )]

[node name="ExplotarArriba" type="Area2D" parent="."]
visible = false
position = Vector2( 956.28, 34.0179 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplotarArriba"]
position = Vector2( -73.4301, 714.668 )
shape = SubResource( 2 )

[node name="ExplotarAbajo" type="Area2D" parent="."]
visible = false
position = Vector2( 956.28, 34.0179 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplotarAbajo"]
position = Vector2( -77.5453, 23.6144 )
shape = SubResource( 2 )

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="body_entered" from="Globo azul" to="." method="_on_Globo_azul_body_entered"]
[connection signal="timeout" from="Globo_timer" to="." method="_on_Globo_timer_timeout"]
[connection signal="timeout" from="Nube_timer" to="." method="_on_Nube_timer_timeout"]
[connection signal="timeout" from="Tiempo_timer" to="." method="_on_Tiempo_timer_timeout"]
[connection signal="timeout" from="Inicio_timer" to="." method="_on_Inicio_timer_timeout"]
[connection signal="iniciar_juego" from="Interfaz" to="." method="nuevo_juego"]
[connection signal="area_entered" from="ExplotarArriba" to="." method="_on_ExplotarAbajo_area_entered"]
[connection signal="area_entered" from="ExplotarAbajo" to="." method="_on_ExplotarAbajo_area_entered"]
